fix tooltip overflow by rearranging elements

--- a/tracker/src/styling/singleday.scss
+++ b/tracker/src/styling/singleday.scss
@@ -20,14 +20,20 @@
 /* Tooltip text */
 .single-day .tooltiptext {
   visibility: hidden;
-  background-color: black;
+  background-color: rgb(39, 39, 39);
   color: #fff;
   text-align: center;
-  padding: 5px 0;
+  padding: .3em;
   border-radius: 6px;
  
   position: absolute;
   z-index: 1;
+  // pointer-events: none;
+  // overflow: hidden;
+  width: 120px;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px;
 }
 
 #square-light {
